display cards on view

--- a/public/index.css
+++ b/public/index.css
@@ -4,15 +4,22 @@
 }
 
 .container {
-  background-color: darkslateblue;
   width: 100vw;
   height: 100vh;
-  opacity: 0.2;
 }
 
 .cards {
   background-color: deeppink;
   width: 200px;
   height: 200px;
+}
+
+.text-item {
+  font-size: 20px;
+}
+
+.img {
+  width: 85px;
+  height: 85px;
 }
 /*# sourceMappingURL=index.css.map */
