--- a/public/index.css
+++ b/public/index.css
@@ -1,25 +1,73 @@
 * {
   margin: 0px;
   padding: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
 }
 
 .container {
+  background-color: darkslateblue;
   width: 100vw;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#box {
+  background-color: deepskyblue;
+  padding: 10px;
+  width: auto;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 25px 0 25px;
 }
 
 .cards {
   background-color: deeppink;
-  width: 200px;
-  height: 200px;
+  padding: 5px;
+  border: 1px solid black;
+  width: 100%;
+  height: 225px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .text-item {
-  font-size: 20px;
+  background-color: chartreuse;
+  font-size: 15px;
+  height: 35px;
+  text-align: center;
 }
 
 .img {
-  width: 85px;
-  height: 85px;
+  width: 100%;
+  min-height: 110px;
+  max-height: 115px;
 }
 /*# sourceMappingURL=index.css.map */
