--- a/public/index.scss
+++ b/public/index.scss
@@ -2,27 +2,59 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .container{
-    //background-color: darkslateblue;
+    background-color: darkslateblue;
     width: 100vw;
     height: 100vh;
     //opacity: 0.2;
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+}
+
+
+#box{
+    background-color: deepskyblue;
+    padding: 10px;
+    width: auto;
+    height:300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 25px 0 25px;
+    //overflow-x: scroll;
+
 }
 
 .cards{
     background-color: deeppink;
-    width: 200px;
-    height: 200px;
+    padding: 5px;
+    border: 1px solid black;
+    width: 100%;
+    height: 225px;
+    object-fit: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    //align-content: flex-start;
+    
 }
 
 .text-item{
-    font-size: 20px;
+    background-color: chartreuse;
+    font-size: 15px;
+    height: 35px;
+    text-align: center;
 }
 
-
 .img{
-    width: 85px;
-    height: 85px;
+    width: 100%;
+    min-height: 110px;
+    max-height: 115px;
+
 }
