--- a/public/index.scss
+++ b/public/index.scss
@@ -6,6 +6,10 @@
     overflow: hidden;
 }
 
+body{
+    text-align: center;
+}
+
 .container{
     background-color: darkslateblue;
     width: 100vw;
